--- a/myyhd.html
+++ b/myyhd.html
@@ -29,5 +29,42 @@
                 <span>Hi, 请 <a href="#">登录</a> / <a href="#">注册</a></span>
             </nav>
         </header>
+        <script type="text/javascript">
+           var log = function() {
+               console.log.apply(console, arguments);
+           }
+
+           var navPart = document.querySelector('nav')
+           navPart.addEventListener('mouseover', function(event) {
+               log('on mouse over', event.target)
+               var t = templateOnNav()
+               // 这个方法用来添加元素更加方便, 不需要 createElement
+               navPart.insertAdjacentHTML('beforeend', t);
+           })
+
+           navPart.addEventListener('mouseout', function(event) {
+               log('on mouse out', event.target)
+               var t = templateOnNav()
+               // 这个方法用来添加元素更加方便, 不需要 createElement
+               navPart.remove('todo-cell');
+           })
+
+           var templateOnNav = function() {
+               var t = `
+                   <div class='todo-cell'>
+                       <button class='todo-done'>完成</button>
+                       <button class='todo-delete'>删除</button>
+                   </div>
+               `
+               return t
+           }
+
+
+       </script>
+       <div id="id-div-container">
+           <a class="avatar" href="#"><img src="image/avatar.png" alt="" /></a>
+           <button type="button" name="button">会员专享价，V3 免费购</button>
+           <a href="#">欢迎进入我的 1 号店</a>
+       </div>
     </body>
 </html>
