添加“送货至”

--- a/myyhd.html
+++ b/myyhd.html
@@ -15,11 +15,15 @@
                 background: #fafafa;
             }
 
+            header > span {
+                margin-left: 10px;
+            }
             nav {
                 background: #fff;
                 width: 92px;
                 margin-left: 100px;
                 line-height: 35px;
+                display: inline;
             }
 
             .my-vip {
@@ -49,6 +53,7 @@
             <nav>
                 <span>Hi, 请 <a href="#">登录</a> / <a href="#">注册</a></span>
             </nav>
+            <span>送货至</span>
         </header>
         <script type="text/javascript">
            var log = function() {
