添加“广东”按钮

--- a/myyhd.html
+++ b/myyhd.html
@@ -23,6 +23,12 @@
                 display: inline;
             }
 
+            .location > button {
+                border-style: solid;
+                background-color: white;
+                border-width: 1px;
+            }
+
             nav {
                 background: #fff;
                 width: 92px;
@@ -60,6 +66,7 @@
             </nav>
             <div class="location">
                 <span>送货至</span>
+                <button type="button" name="button">广东</button>
             </div>
         </header>
         <script type="text/javascript">
