调整“勋章”按钮

--- a/myyhd.html
+++ b/myyhd.html
@@ -57,6 +57,10 @@
             .my-credits {
                 padding: 10px 38px 10px 38px;
             }
+
+            .credits {
+                margin-left: -4px;
+            }
         </style>
     </head>
     <body>
@@ -107,7 +111,7 @@
            <a class="my-info" href="#">欢迎进入我的 1 号店</a>
            <div class="credits-container">
                <button class="my-credits" type="button" name="button">积分</button>
-               <button class="my-credits" type="button" name="button">勋章</button>
+               <button class="my-credits credits" type="button" name="button">勋章</button>
            </div>
        </div>
     </body>
