调整“积分”和“勋章”按钮

--- a/myyhd.html
+++ b/myyhd.html
@@ -56,11 +56,19 @@
 
             .my-credits {
                 padding: 10px 38px 10px 38px;
+                background-color: rgb(255,242,235);
+                border-width: 1px;
+                border-style: solid;
+            }
+
+            .credits-container {
+                margin-top: 6px;
             }
 
             .credits {
                 margin-left: -4px;
             }
+
         </style>
     </head>
     <body>
