完成悬浮窗口

--- a/myyhd.html
+++ b/myyhd.html
@@ -35,6 +35,11 @@
                 margin-left: 100px;
                 line-height: 35px;
                 display: inline;
+                border-color: #dcdcdc;
+                border-style: solid;
+                border-width: 1px;
+                border-bottom: none;
+                padding: 10px 5px 11px 5px;
             }
 
             .my-vip {
@@ -55,18 +60,39 @@
             }
 
             .my-credits {
-                padding: 10px 38px 10px 38px;
+                padding: 10px 60px 10px 60px;
                 background-color: rgb(255,242,235);
                 border-width: 1px;
                 border-style: solid;
+                border-bottom: none;
             }
 
             .credits-container {
                 margin-top: 6px;
             }
 
+            .avatar {
+                margin-left: 10px;
+            }
+
+            .points {
+                border-left: none;
+            }
+
             .credits {
                 margin-left: -4px;
+                padding-right: 42px;
+                border-right: none;
+            }
+
+            #id-div-container {
+                margin-left: 100px;
+                padding-top: 10px;
+                border-style: solid;
+                border-color: #bfbfbf;
+                border-width: 1px;
+                display: inline-block;
+                border-top: none;
             }
 
         </style>
@@ -111,9 +137,9 @@
                        <div id="id-div-container">
                            <a class="avatar" href="#"><img src="image/avatar.png" alt="" /></a>
                            <button class="my-vip" type="button" name="button">会员专享价，V3 免费购</button>
-                           <a class="my-info" href="#">欢迎进入我的 1 号店</a>
+                           <a class="my-info" href="#">欢迎进入我的 1 号店 ></a>
                            <div class="credits-container">
-                               <button class="my-credits" type="button" name="button">积分</button>
+                               <button class="my-credits points" type="button" name="button">积分</button>
                                <button class="my-credits credits" type="button" name="button">勋章</button>
                            </div>
                        </div>
