添加箭头图标

--- a/myyhd.html
+++ b/myyhd.html
@@ -42,6 +42,16 @@
                 padding: 10px 5px 11px 5px;
             }
 
+            nav a {
+                text-decoration: none;
+            }
+
+            nav button {
+                padding: 0px 0px 0px 0px;
+                position: absolute;
+                top: 21px;
+                left: 150px;
+            }
             .my-vip {
                 position: absolute;
                 border-radius: 20px;
@@ -101,6 +111,7 @@
         <header>
             <nav>
                 <span>Hi, 请 <a href="#">登录</a> / <a href="#">注册</a></span>
+                <button type="button" name="button"><img src="image/downArrow.png" alt="" /></button>
             </nav>
             <div class="location">
                 <span>送货至</span>
