--- a/myyhd.html
+++ b/myyhd.html
@@ -39,7 +39,7 @@
                 border-style: solid;
                 border-width: 1px;
                 border-bottom: none;
-                padding: 10px 5px 11px 5px;
+                padding: 10px 5px 12px 5px;
             }
 
             nav a {
@@ -50,6 +50,12 @@
                 padding: 0px 0px 0px 0px;
                 position: absolute;
                 top: 21px;
+                left: 150px;
+            }
+
+            .down_arrow {
+                position: absolute;
+                top: 17px;
                 left: 150px;
             }
             .my-vip {
@@ -111,7 +117,7 @@
         <header>
             <nav>
                 <span>Hi, 请 <a href="#">登录</a> / <a href="#">注册</a></span>
-                <button type="button" name="button"><img src="image/downArrow.png" alt="" /></button>
+                <a class="down_arrow" href="#"><img src="image/downArrow.png" alt="" /></a>
             </nav>
             <div class="location">
                 <span>送货至</span>
