微调弹出窗口布局

--- a/myyhd.html
+++ b/myyhd.html
@@ -75,7 +75,6 @@
                 border-width: 1px;
                 border-style: solid;
                 border-bottom: none;
-                border-left: none;
             }
 
             .credits-container {
@@ -87,7 +86,7 @@
             }
 
             .points {
-                /*border-left: none;*/
+                border-left: none;
             }
 
             .credits {
@@ -103,6 +102,7 @@
                 border-color: #dcdcdc;
                 border-style: solid;
                 border-width: 1px;
+                border-top: none;
             }
 
             .display-info {
