完成省份 hover 功能

--- a/myyhd.html
+++ b/myyhd.html
@@ -106,22 +106,33 @@
             }
 
             #id-hot-province {
-                text-align: center;
-                position: absolute;
-                margin-top: 10px;
-                margin-left: 250px;
                 border-bottom-style: solid;
                 border-bottom-color: black;
                 border-bottom-width: 1px;
             }
 
             .provinces {
-                text-align: center;
-                position: absolute;
-                margin-top: 30px;
-                margin-left: 250px;
+
             }
 
+            .dropdown {
+                position: relative;
+                display: inline-block;
+            }
+
+            .dropdown-content {
+                display: none;
+                position: absolute;
+                z-index: 1;
+            }
+
+            .dropdown:hover .dropdown-content {
+                display: block;
+            }
+
+            .menu-container {
+                display: inline;
+            }
         </style>
     </head>
     <body>
@@ -139,10 +150,10 @@
                     </div>
                 </div>
             </nav>
-            <div class="location">
+            <div class="location dropdown">
                 <span>送货至</span>
                 <button type="button" name="button">广东 <img src="image/down.png" alt=""></button>
-                <div class="table-container">
+                <div class="table-container dropdown-content">
                     <table id="id-hot-province">
                         <tr>
                             <th>热门省市</th>
@@ -202,7 +213,22 @@
                     </table>
                 </div>
             </div>
+            <!-- <div class="menu-container">
+                <span>我的 1 号店</span>
+                <dl>
+                    <dt>CSS</dt>
+                    <dd>CSS概念</dd>
+                    <dd>CSS应用</dd>
+                    <dd>CSS hacks</dd>
+                </dl>
+                <span>收藏夹</span>
+                <span>掌上 1 号店</span>
+                <span>客户服务</span>
+                <span>网站导航</span>
+                <span>关注我们：</span>
+            </div> -->
         </header>
+
         <script type="text/javascript">
            var log = function() {
                console.log.apply(console, arguments);
@@ -253,26 +279,11 @@
                })
            }
 
-           var templateOnNav = function() {
-               var t = `
-                       <div id="id-div-container">
-                           <a class="avatar" href="#"><img src="image/avatar.png" alt="" /></a>
-                           <button class="my-vip" type="button" name="button">会员专享价，V3 免费购</button>
-                           <a class="my-info" href="#">欢迎进入我的 1 号店 ></a>
-                           <div class="credits-container">
-                               <button class="my-credits points" type="button" name="button">积分</button>
-                               <button class="my-credits credits" type="button" name="button">勋章</button>
-                           </div>
-                       </div>
-               `
-               return t
-           }
-
            var __main = function() {
                bindEventMouseOver()
                bindEventMouseOut()
-               bindProvincesOn()
-               bindProvincesOff()
+            //    bindProvincesOn()
+            //    bindProvincesOff()
            }
 
            __main()
