完成省市 hover 布局

--- a/myyhd.html
+++ b/myyhd.html
@@ -105,14 +105,42 @@
                 display: none;
             }
 
+            .table-container {
+                width: 350px;
+                padding-top: 15px;
+                padding-left: 50px;
+                text-align: center;
+            }
+
             #id-hot-province {
                 border-bottom-style: solid;
-                border-bottom-color: black;
+                border-bottom-color: #dcdcdc;
                 border-bottom-width: 1px;
+                padding-bottom: 2px;
+            }
+
+            #id-hot-province button {
+                border: none;
+                background: none;
+            }
+
+            #id-hot-province button:hover {
+                background-color: #fb8c2d;
+                cursor: pointer;
             }
 
             .provinces {
+                margin-top: 5px;
+            }
 
+            .provinces button {
+                border: none;
+                background: none;
+            }
+
+            .provinces button:hover {
+                background-color: #fb8c2d;
+                cursor: pointer;
             }
 
             .dropdown {
@@ -157,58 +185,58 @@
                     <table id="id-hot-province">
                         <tr>
                             <th>热门省市</th>
-                            <td>上海</td>
-                            <td>北京</td>
-                            <td>广东</td>
-                            <td>湖北</td>
-                            <td>四川</td>
+                            <td><button type="button" name="button">上海</button></td>
+                            <td><button type="button" name="button">北京</button></td>
+                            <td><button type="button" name="button">广东</button></td>
+                            <td><button type="button" name="button">湖北</button></td>
+                            <td><button type="button" name="button">四川</button></td>
                         </tr>
                     </table>
                     <table class="provinces">
                         <tr>
                             <td>华北：</td>
                             <td><button type="button" name="button">北京</button></td>
-                            <td>天津</td>
-                            <td>河北</td>
-                            <td>山西</td>
-                            <td>内蒙古</td>
+                            <td><button type="button" name="button">天津</button></td>
+                            <td><button type="button" name="button">河北</button></td>
+                            <td><button type="button" name="button">山西</button></td>
+                            <td><button type="button" name="button">内蒙古</button></td>
                         </tr>
                         <tr>
                             <td>华东：</td>
-                            <td>上海</td>
-                            <td>江苏</td>
-                            <td>浙江</td>
-                            <td>安徽</td>
-                            <td>福建</td>
-                            <td>山东</td>
+                            <td><button type="button" name="button">上海</button></td>
+                            <td><button type="button" name="button">江苏</button></td>
+                            <td><button type="button" name="button">浙江</button></td>
+                            <td><button type="button" name="button">安徽</button></td>
+                            <td><button type="button" name="button">福建</button></td>
+                            <td><button type="button" name="button">山东</button></td>
                         </tr>
                         <tr>
                             <td>华南：</td>
-                            <td>广东</td>
-                            <td>广西</td>
-                            <td>海南</td>
+                            <td><button type="button" name="button">广东</button></td>
+                            <td><button type="button" name="button">广西</button></td>
+                            <td><button type="button" name="button">海南</button></td>
                         </tr>
                         <tr>
                             <td>西南：</td>
-                            <td>重庆</td>
-                            <td>四川</td>
-                            <td>贵州</td>
-                            <td>云南</td>
-                            <td>西藏</td>
+                            <td><button type="button" name="button">重庆</button></td>
+                            <td><button type="button" name="button">四川</button></td>
+                            <td><button type="button" name="button">贵州</button></td>
+                            <td><button type="button" name="button">云南</button></td>
+                            <td><button type="button" name="button">西藏</button></td>
                         </tr>
                         <tr>
                             <td>西北：</td>
-                            <td>陕西</td>
-                            <td>甘肃</td>
-                            <td>青海</td>
-                            <td>宁夏</td>
-                            <td>新疆</td>
+                            <td><button type="button" name="button">陕西</button></td>
+                            <td><button type="button" name="button">甘肃</button></td>
+                            <td><button type="button" name="button">青海</button></td>
+                            <td><button type="button" name="button">宁夏</button></td>
+                            <td><button type="button" name="button">新疆</button></td>
                         </tr>
                         <tr>
                             <td>东北：</td>
-                            <td>辽宁</td>
-                            <td>吉林</td>
-                            <td>黑龙江</td>
+                            <td><button type="button" name="button">辽宁</button></td>
+                            <td><button type="button" name="button">吉林</button></td>
+                            <td><button type="button" name="button">黑龙江</button></td>
                         </tr>
                     </table>
                 </div>
