--- a/myyhd.html
+++ b/myyhd.html
@@ -107,9 +107,14 @@
 
             .table-container {
                 width: 350px;
-                padding-top: 15px;
-                padding-left: 50px;
-                text-align: center;
+                padding-top: 5px;
+                padding-left: 5px;
+                text-align: left;
+                left: 49px;
+                background-color: white;
+                border-style: solid;
+                border-color: #dcdcdc;
+                border-width: 1px;
             }
 
             #id-hot-province {
@@ -117,6 +122,7 @@
                 border-bottom-color: #dcdcdc;
                 border-bottom-width: 1px;
                 padding-bottom: 2px;
+                padding-left: 75px;
             }
 
             #id-hot-province button {
